--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -1,19 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-		<groupId>com.xczhihui</groupId>
-		<artifactId>root-pom</artifactId>
-		<version>2.2.0-SNAPSHOT</version>
-		<relativePath>../</relativePath>
- </parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.xczhihui</groupId>
+        <artifactId>root-pom</artifactId>
+        <version>2.2.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
+    </parent>
 
-  <artifactId>course-api</artifactId>
-  <packaging>jar</packaging>
-  <version>2.2.0-SNAPSHOT</version>
-  
-  <name>course-api</name>
-  <url>http://maven.apache.org</url>
+    <artifactId>course-api</artifactId>
+    <packaging>jar</packaging>
+    <version>2.2.0-SNAPSHOT</version>
+
+    <name>course-api</name>
+    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -80,8 +80,8 @@
             <artifactId>weixin-java-mp</artifactId>
             <version>3.0.0</version>
         </dependency>
-        
-        
+
+
         <!-- qq分享使用 -->
         <!-- https://mvnrepository.com/artifact/net.gplatform/Sdk4J -->
         <dependency>
@@ -95,7 +95,13 @@
             <groupId>com.belerweb</groupId>
             <artifactId>weibo4j-oauth2</artifactId>
             <version>2.1.1-beta2-2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        
+
     </dependencies>
 </project>
