--- a/common-solr/pom.xml
+++ b/common-solr/pom.xml
@@ -51,5 +51,9 @@
             <artifactId>pinyin4j</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
