--- a/online-web/pom.xml
+++ b/online-web/pom.xml
@@ -376,6 +376,32 @@
                     <warSourceExcludes>**/*.html,**/*.jsp,**/*.ftl</warSourceExcludes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/resources/${env}/</directory>
+                                    <includes>
+                                        <include>robots.txt</include>
+                                    </includes>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
         <resources>
@@ -384,12 +410,15 @@
                 <includes>
                     <include>*.*</include>
                 </includes>
+                <excludes>
+                    <exclude>robots.txt</exclude>
+                </excludes>
                 <filtering>false</filtering>
             </resource>
             <resource>
                 <directory>src/main/resources/${env}</directory>
                 <includes>
-                    <include>*.*</include>
+                    <include>config.properties</include>
                 </includes>
                 <filtering>false</filtering>
             </resource>
