--- a/course-provider/pom.xml
+++ b/course-provider/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -246,13 +246,13 @@
     </dependencies>
 
     <profiles>
-    	<profile>
+        <profile>
             <id>dev-local</id>
             <properties>
                 <env>env-dev-local</env>
             </properties>
         </profile>
-    
+
         <profile>
             <id>dev</id>
             <properties>
