--- a/online-api/pom.xml
+++ b/online-api/pom.xml
@@ -22,5 +22,9 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>common-exception</artifactId>
+        </dependency>
     </dependencies>
 </project>
