--- a/online-web/pom.xml
+++ b/online-web/pom.xml
@@ -395,6 +395,7 @@
                                     <directory>src/main/resources/${env}/</directory>
                                     <includes>
                                         <include>robots.txt</include>
+                                        <include>config.json</include>
                                     </includes>
                                     <filtering>false</filtering>
                                 </resource>
@@ -413,6 +414,7 @@
                 </includes>
                 <excludes>
                     <exclude>robots.txt</exclude>
+                    <exclude>config.json</exclude>
                 </excludes>
                 <filtering>false</filtering>
             </resource>
