--- a/online-web/src/main/resources/env-dev/config.properties
+++ b/online-web/src/main/resources/env-dev/config.properties
@@ -93,7 +93,7 @@ env.flag=dev
 
 #熊猫币比例
 rate=10
-web.url=http://dev.ixincheng.com:10086
+web.url=http://dev-www.ixincheng.com
 email.receiver=yuruixin@ixincheng.com
 
 weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
