--- a/online-web/src/main/resources/env-dev/config.properties
+++ b/online-web/src/main/resources/env-dev/config.properties
@@ -63,6 +63,7 @@ cc.live.user.id=B5E673E55C702C42
 cc.api.key=K45btKhytR527yfTAjEp6z4fb3ajgu66
 cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 cc.player.id=E92940E0788E2DAE
+cc.uploadCallback.url=http://dev-www.xczhihui.com/videoRes/updateCourseApplyResource
 
 #微信支付配置
 wechat.app.id=wx48d230a99f1c20d9
