--- a/medical-provider/src/main/resources/env-prod/config.properties
+++ b/medical-provider/src/main/resources/env-prod/config.properties
@@ -43,7 +43,8 @@ solr.url=http://172.26.108.179:8848/solr
 solr.heiht.pre=<span style="color: red">
 #高亮后缀
 solr.heiht.post=</span>
-solr.core = doctors
+solr.doctor.core = doctors
+solr.hospital.core = hospitals
 
 online.apprentice.apply.success.sms.code=SMS_139244349
 online.apprentice.apply.fail.sms.code=SMS_139229517
