--- a/course-provider/src/main/resources/env-test/config.properties
+++ b/course-provider/src/main/resources/env-test/config.properties
@@ -35,7 +35,7 @@ rate=10
 wx.appId=wx48d230a99f1c20d9
 wx.secret=df2206fd380c36389ceccec9e8ac8f5c
 
-mobile.domain=http://test-wx.xczhihui.com
+mobile.domain=https://cs.m.xczhihui.com
 
 push.android.accessId=2100298021
 push.android.secretKey=5c0910feb4f8f1c27af8e0e115de2a61
