--- a/online-manager/src/main/resources/env-test/config.properties
+++ b/online-manager/src/main/resources/env-test/config.properties
@@ -55,7 +55,7 @@ wechatpay.h5.secret=df2206fd380c36389ceccec9e8ac8f5c
 
 #其他配置
 web.url=https://cs.xczhihui.com
-mobile.domain=http://test-wx.xczhihui.com
+mobile.domain=https://cs.m.xczhihui.com
 env.flag=test
 domain=ixincheng.com
 cookieTokenName=_uc_t_manager_test
@@ -79,7 +79,7 @@ sms.anchor.approve.pass.code=SMS_137668244
 #您的${type}认证未能通过，原因: ${reason}，如有疑问请联系客服0898-32881934。
 sms.anchor.approve.notPass.code=SMS_137673285
 
-#{lecture}老师叫你去上课了！您报名的《{courseName}》直播还有{minute}分钟就要开始了，别忘了准时观看。点击http://test-wx.xczhihui.com/${code}进入课程
+#{lecture}老师叫你去上课了！您报名的《{courseName}》直播还有{minute}分钟就要开始了，别忘了准时观看。点击https://cs.m.xczhihui.com/${code}进入课程
 sms.live.course.remind.code=SMS_135029198
 #您报名的《{courseName}》将于明天{time}在{address}开始，别忘了准时参加！
 sms.offline.course.remind.code=SMS_135041783
